# medea

./: README.md  medea.cabal
example/: Example.lhs
src/: Decoder.hs  Medea.hs  Validated.hs
