name:                medea
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/danten/medea#readme
license:             BSD3
license-file:        LICENSE
author:              Mats Daniel Gustafsson
maintainer:          daniel@advancedtelematic.com
copyright:           2017 Mats Daniel Gustafsson
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable simple-library-exe
  hs-source-dirs:      example
  main-is:             Example.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple-library
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/danten/medea
